JenkinsTemplate.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Provisioning of 1 EC2 Instance within a Custom Network with Jenkins running on the instance via Cloudformation


Resources:
  
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.7.0.0/16
      EnableDnsHostnames: True
      EnableDnsSupport: True
      InstanceTenancy: default
      Tags: 
        - Key: Name
          Value: JenkinsProjectVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: eu-west-2b
      CidrBlock: 10.7.1.0/24
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name
          Value: ProjectPublicSubnet01
      VpcId: !Ref VPC

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: eu-west-2b
      CidrBlock: 10.7.2.0/24
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name
          Value: ProjectPrivateSubnet01
      VpcId: !Ref VPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: ProjectPublicRouteTable
      VpcId: !Ref VPC

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: ProjectPrivateRouteTable
      VpcId: !Ref VPC       

  PublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable     

  PrivateRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security Group for Application
      GroupName: Web SG
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: ProjectSG
      VpcId: !Ref VPC   

  InternetGateWay:
   Type: AWS::EC2::InternetGateway
   Properties: 
     Tags: 
       - Key: Name
         Value: ProjectIGW   

  InternetGateWayAttachment:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties: 
      InternetGatewayId: !Ref InternetGateWay
      VpcId: !Ref VPC     

  PublicRoute:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateWay
      RouteTableId: !Ref PublicRouteTable  

  JenkinsInstance:
    Type: AWS::EC2::Instance
    Properties: 
      BlockDeviceMappings: 
        - DeviceName: /dev/xvda
          Ebs: 
            VolumeType: gp3
            Iops: 3000
            DeleteOnTermination: true
            VolumeSize: 8
      ImageId: "ami-05c7c53494ee72c3b"
      InstanceType: t2.micro
      KeyName: "dockernew_keypair"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt-get update -y
          curl -fsSL https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key | sudo tee \
            /usr/share/keyrings/jenkins-keyring.asc > /dev/null
          echo deb [signed-by=/usr/share/keyrings/jenkins-keyring.asc] \
            https://pkg.jenkins.io/debian-stable binary/ | sudo tee \
            /etc/apt/sources.list.d/jenkins.list > /dev/null
          sudo apt-get update -y
          sudo apt install openjdk-17-jre -y
          sudo apt-get install jenkins -y
          sudo systemctl enable jenkins
          sudo systemctl start jenkins
          sudo systemctl status jenkins
          cat /var/lib/jenkins/secrets/initialAdminPassword
      SecurityGroupIds: 
        - !Ref SecurityGroup
      SubnetId: !Ref PublicSubnet
      Tags: 
        - Key: Name
          Value: ProjectInstance01
